refactor(handler): improving code clarity in handler
